--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1519,7 +1519,7 @@ form.ts-labels-inside-input .form-group label.focused,
     position: relative;
 }
 
-.ts-gallery .ts-gallery__item {
+.ts-gallery {
     border-radius: 0;
     background-color: transparent;
 }
@@ -1538,9 +1538,10 @@ form.ts-labels-inside-input .form-group label.focused,
     flex-direction: column;
     justify-content: center;
     z-index: 1;
-    transform: scale(1.2);
+    transform: scale(1);
     transition: .6s ease;
     opacity: 0;
+    
 }
 
 .ts-gallery .ts-gallery__item:hover .ts-gallery__item-description {
@@ -1548,18 +1549,12 @@ form.ts-labels-inside-input .form-group label.focused,
     opacity: 1;
 }
 
-.ts-gallery .ts-gallery__item:hover img {
-    transform: scale(1.3) rotate(-9deg);
-}
-
 .ts-gallery .ts-gallery__item h4 {
     margin-bottom: 0;
 }
 
 .ts-gallery .ts-gallery__item img {
-    border-radius: 0;
-    transform: scale(1) rotate(0deg);
-    backface-visibility: hidden;
+    
     transition: .8s ease;
 }
 
