--- a/assets/css/shortcodes.css
+++ b/assets/css/shortcodes.css
@@ -956,7 +956,7 @@
 }
 
 .flat-portfolio .portfolio-filter > li:hover:before {
-	color: #2bb0ef;
+	color: #ffef00;
 }
 
 .flat-portfolio .portfolio-filter > li:first-child:before {
@@ -969,7 +969,7 @@
 
 .flat-portfolio .portfolio-filter > li.active a,
 .flat-portfolio .portfolio-filter > li a:hover {  
-    color: #2bb0ef;
+    color: #ffef00;
 }
 
 .flat-portfolio .portfolio-filter > li a:before {
@@ -978,7 +978,7 @@
 	top: 100%;
 	height: 3px;
 	width: 0;
-	background-color: #2bb0ef;
+	background-color: #ffef00;
 	content: "";
 	-webkit-transition: all 0.3s ease-out;
 	   -moz-transition: all 0.3s ease-out;
@@ -997,7 +997,7 @@
 	top: 100%;
 	height: 3px;
 	width: 100%;
-	background-color: #2bb0ef;
+	background-color: #ffef00;
 	content: "";
 }
 
